ibuilder/tests/not_compile/field_not_derived.stderr
error[E0277]: the trait bound `Bar: NewBuildableValue` is not satisfied
 --> $DIR/field_not_derived.rs:3:10
  |
3 | #[derive(IBuilder)]
  |          ^^^^^^^^ the trait `NewBuildableValue` is not implemented for `Bar`
  |
  = note: required by `new_buildable_value`
  = note: this error originates in the derive macro `IBuilder` (in Nightly builds, run with -Z macro-backtrace for more info)
